--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.21"
   },
   "devDependencies": {
